--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "build-test-tool": "npm --prefix='nova-components/TestTool' run dev",
+        "build-test-tool-prod": "cd nova-components/TestTool && npm run prod"
     },
     "devDependencies": {
-        "axios": "^0.25",
-        "laravel-vite-plugin": "^0.4.0",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^2.9.11"
+        "laravel-mix": "^6.0.6",
+        "vue-loader": "^15.9.8",
+        "vue": "^2.7.2"
     }
 }
