--- a/nova-components/TestTool/package.json
+++ b/nova-components/TestTool/package.json
@@ -11,10 +11,9 @@
     "nova:install": "npm --prefix='../../vendor/laravel/nova' ci"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.2.22",
     "laravel-mix": "^6.0.49",
     "postcss": "^8.3.11",
+    "vue": "^3.2.37",
     "vue-loader": "^16.8.3"
-  },
-  "dependencies": {}
+  }
 }
